[gd_scene load_steps=29 format=2]

[ext_resource path="res://actors/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/player/Player_controller.gd" type="Script" id=2]
[ext_resource path="res://actors/player/PlayerStateMachine.gd" type="Script" id=3]
[ext_resource path="res://actors/player/states/motion/on_ground/idle.gd" type="Script" id=4]
[ext_resource path="res://actors/player/states/motion/on_ground/move.gd" type="Script" id=5]
[ext_resource path="res://sound/sfx/013-Move01.wav" type="AudioStream" id=6]
[ext_resource path="res://actors/player/states/motion/on_ground/slide.gd" type="Script" id=7]
[ext_resource path="res://sound/sfx/017-Jump03.wav" type="AudioStream" id=8]
[ext_resource path="res://actors/player/states/combat/Attack.gd" type="Script" id=9]
[ext_resource path="res://actors/player/camara/CamaraPivot.gd" type="Script" id=10]
[ext_resource path="res://actors/player/camara/GridSnapper.gd" type="Script" id=11]
[ext_resource path="res://actors/weapons/WeaponPivot.gd" type="Script" id=12]
[ext_resource path="res://actors/weapons/sword/Sword.tscn" type="PackedScene" id=13]
[ext_resource path="res://actors/stats/Stats.tscn" type="PackedScene" id=14]
[ext_resource path="res://actors/hit_box/HitBox.tscn" type="PackedScene" id=15]

[sub_resource type="Animation" id=1]

resource_name = "attack_down"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=2]

resource_name = "attack_horizontal"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}

[sub_resource type="Animation" id=3]

resource_name = "attack_up"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]

loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=5]

loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=6]

loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]

loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=8]

loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=9]

loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=10]

length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[sub_resource type="Animation" id=11]

length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 21, 20, 21 ]
}

[sub_resource type="Animation" id=12]

length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="OccluderPolygon2D" id=13]

polygon = PoolVector2Array( -3.85867, 11.2953, 3.14142, 11.385, 3.23116, 5.55163, 7.35942, 5.64137, 7.62865, -1.08948, 5.65427, -1.62795, 5.9235, -7.5511, 3.14142, -11.6794, -2.24327, -11.8588, -6.28178, -8.89727, -5.9228, -3.87157, -7.26897, -2.61514, -6.55101, -0.281776, -7.62795, 3.4875, -6.90999, 6.80806, -4.48688, 6.98755 )

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimationPlayer" parent="." index="0"]
playback_speed = 2.0
anims/attack_down = SubResource( 1 )
anims/attack_horizontal = SubResource( 2 )
anims/attack_up = SubResource( 3 )
anims/idle_down = SubResource( 4 )
anims/idle_horizontal = SubResource( 5 )
anims/idle_up = SubResource( 6 )
anims/slide_down = SubResource( 7 )
anims/slide_horizontal = SubResource( 8 )
anims/slide_up = SubResource( 9 )
anims/walk_down = SubResource( 10 )
anims/walk_horizontal = SubResource( 11 )
anims/walk_up = SubResource( 12 )

[node name="PlayerSound" type="AudioStreamPlayer" parent="." index="2"]
volume_db = -4.0

[node name="StateMachine" type="Node" parent="." index="3"]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 5 )
MOVE_SOUND = ExtResource( 6 )

[node name="Slide" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 7 )
SLIDE_LENGHT = 55.0
SLIDE_SOUND = ExtResource( 8 )

[node name="Attack" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 9 )

[node name="BodyPivot" parent="." index="4"]
editor/display_folded = true

[node name="Body" parent="BodyPivot" index="0"]
frame = 27

[node name="CamaraPivot" type="Position2D" parent="." index="5"]
editor/display_folded = true
script = ExtResource( 10 )

[node name="CamaraOffset" type="Position2D" parent="CamaraPivot" index="0"]
position = Vector2( 60, 0 )

[node name="Camera2D" type="Camera2D" parent="CamaraPivot/CamaraOffset" index="0"]
current = true
smoothing_enabled = true
smoothing_speed = 3.0
editor_draw_drag_margin = true

[node name="GridSnapper" type="Position2D" parent="." index="6"]
editor/display_folded = true
script = ExtResource( 11 )

[node name="Camera2D" type="Camera2D" parent="GridSnapper" index="0"]

[node name="WeaponPivot" type="Position2D" parent="." index="7"]
script = ExtResource( 12 )

[node name="WeaponOffset" type="Position2D" parent="WeaponPivot" index="0"]
position = Vector2( 14, 0 )
rotation = 4.71239

[node name="Sword" parent="WeaponPivot/WeaponOffset" index="0" instance=ExtResource( 13 )]

[node name="Stats" parent="." index="8" instance=ExtResource( 14 )]

[node name="HitBox" parent="." index="9" instance=ExtResource( 15 )]

[node name="LightOccluder2D" type="LightOccluder2D" parent="." index="11"]
occluder = SubResource( 13 )

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]
